--- a/NewOrMapper_if19b098/NewOrMapper_if19b098.csproj
+++ b/NewOrMapper_if19b098/NewOrMapper_if19b098.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="6.0.2" />
+  </ItemGroup>
+
 </Project>
